# audioBlade

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  README.zh-CN.md
apps/desktop/: CMakeLists.txt  main.cpp
control/: README.md
control/profiles/: README.md  profile.schema.json
control/profiles/examples/: default-monitor-route.json
docs/: DEVELOPMENT_GUIDELINES.md  DEVELOPMENT_PROCESS.md  README.md  TECHNICAL_PLAN.md  技术方案.md
docs/Harness/: agents.md  team.md  workflow.md
docs/Plan/: phase0-foundation-plan.md  week1-daily-plan.md  week2-daily-plan.md  week3-daily-plan.md  week3-diagnostics-compatibility.md  week3-scope.md  week3-verification.md  week4-daily-plan.md
docs/adr/: 0001-mvp-stack-and-boundaries.md  0002-profile-schema-v0.md
docs/cn/: README.md  开发规范.md  技术方案.md  长期开发计划.md
docs/cn/Plan/: phase0-foundation-plan.cn.md
docs/evidence/: README.md  week2-device-enumeration-sample.md
docs/logs/: 2026-06-23-development-log.md
docs/reports/: 2026-06-23-phase0-day1.md  2026-06-23-phase0-week1-closeout.md  2026-06-23-phase0-week2-closeout.md  2026-06-23-phase0-week3-closeout.md
drivers/: README.md
engine/: README.md
engine/devices/: AudioDeviceInfo.h  DeviceEnumerator.cpp  DeviceEnumerator.h  README.md
knowledge/: finetune-macos-audio-routing-notes.md  juce-official-docs-reference.md
platform/macos/: README.md
platform/windows/: README.md
tools/: README.md  harness.sh
tools/diagnostics/: README.md  validate_profile.py
